--- a/src/styles/Rockets.css
+++ b/src/styles/Rockets.css
@@ -41,7 +41,7 @@
   width: fit-content;
   padding: 0.5rem 1rem;
   background-color: #0290ff;
-  color: white;
+  color: #fff;
   border-radius: 0.25rem;
   border: none;
 }
