--- a/src/styles/missions.css
+++ b/src/styles/missions.css
@@ -1,13 +1,16 @@
-.container {
+.mission-container {
   width: 90%;
-  margin-top: 5%;
+  margin: 5% 0 5% 5%;
   box-sizing: border-box;
   padding: 15px;
-  margin-left: 5%;
 }
 
 .mission {
   box-sizing: border-box;
+}
+
+.mission:nth-child(even) {
+  background-color: #f3f3f3;
 }
 
 table {
@@ -19,3 +22,24 @@ th {
   border: 1px solid #000;
   padding: 10px;
 }
+
+.not-member {
+  width: 130px;
+  background-color: #a7a2a2;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  padding: 6px 4px;
+  color: rgb(255, 255, 255);
+}
+
+.join-mission {
+  width: 130px;
+  background-color: transparent;
+  border-radius: 5px;
+  padding: 10px 4px;
+  border: 1px solid #000;
+  color: black;
+}
+
+
