--- a/src/styles/Rockets.css
+++ b/src/styles/Rockets.css
@@ -37,6 +37,15 @@
   text-align: justify;
 }
 
+.badge {
+  padding: 0 0.5rem;
+  margin-right: 0.5rem;
+  font-size: 0.8rem;
+  border-radius: 0.3rem;
+  color: #e8e8e8;
+  background-color: #1792ae;
+}
+
 .btn-reserve {
   width: fit-content;
   padding: 0.5rem 1rem;
